[gd_scene load_steps=8 format=2]

[ext_resource path="res://Infor/Infor_bg.png" type="Texture" id=1]
[ext_resource path="res://Infor/Infor.gd" type="Script" id=2]
[ext_resource path="res://Music and Sounds/Hit.wav" type="AudioStream" id=3]
[ext_resource path="res://Music and Sounds/intro_main.wav" type="AudioStream" id=4]

[sub_resource type="Animation" id=1]
resource_name = "Fade in"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "Fade out"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"update": 0,
"values": [  ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ) ]
}

[node name="Infor" type="Node2D"]
script = ExtResource( 2 )

[node name="InforBg" type="Sprite" parent="."]
position = Vector2( 161, 91 )
scale = Vector2( 0.175926, 0.175926 )
texture = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 327.0
margin_bottom = 184.0
color = Color( 0, 0, 0, 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
"anims/Fade in" = SubResource( 1 )
"anims/Fade out" = SubResource( 3 )
anims/RESET = SubResource( 2 )

[node name="BackButton" type="Button" parent="."]
margin_left = 128.0
margin_top = 142.0
margin_right = 197.0
margin_bottom = 162.0
text = "BACK"

[node name="ClickSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="BGMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[connection signal="mouse_entered" from="BackButton" to="." method="_on_BackButton_mouse_entered"]
[connection signal="pressed" from="BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="ready" from="BGMusic" to="." method="_on_BGMusic_ready"]
